[build-system]
requires = ["hatchling"] #, "hatch-vcs"
build-backend = "hatchling.build"

[project]
name = "plutonlib"
version = "0.2.1"
# dynamic = ["version"]
description = ""
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "Alain Mackay", email = "alain.x.mackay@gmail.com" },
]
keywords = [
    "astrophsyics",
    "pluto",
]

dependencies = [
    "astropy",
    "contextlib2",
    "future",
    "h5py",
    "hdf5plugin",
    "ipython",
    "matplotlib",
    "numba",
    "numpy",
    "pyyaml",
    "scipy",
    "tabulate",
    "yt",
]

[tool.hatch.dependencies]
plutokore = { git = "https://gitlab.com/utas-agn/plutokore.git", branch = "master" }


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"  # Must match [project] version
version_files = [
    "pyproject.toml:project.version",  # Explicit path
    "pyproject.toml:tool.commitizen.version",  # Sync both
    "plutonlib/__init__.py:__version__"
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true

[project.urls]
Homepage = "https://github.com/LaaniLoo/plutonlib"


[tool.hatch.build.targets.wheel]
packages = ["src/plutonlib"]

