[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "plutonlib"
version = "0.4.4"
# dynamic = ["version"]
description = ""
readme = "README.md"
license = "GPL-3.0"
authors = [
    { name = "Alain Mackay", email = "alain.x.mackay@gmail.com" },
]
keywords = [
    "astrophsyics",
    "pluto",
]

dependencies = [
    "astropy",
    "contextlib2",
    "future",
    "h5py",
    "hdf5plugin",
    "ipython",
    "matplotlib",
    "numba",
    "numpy",
    "pyyaml",
    "scipy",
    "tabulate",
    "yt",
]

[tool.hatch.dependencies]
plutokore = { git = "https://gitlab.com/utas-agn/plutokore.git", branch = "master" } #check if can git clone with SSH key without prompts

[tool.hatch.build.targets.wheel]
packages = ["src/plutonlib"]

[tool.hatch.version]
source = "vcs"  # Uses git tags for versioning
pattern = "v(?P<version>.+)"

[tool.hatch.build.hooks.vcs]
version-file = "src/plutonlib/_version.py"  # Or __init__.py

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.0"  # Must match [project] version
version_files = [
    "pyproject.toml:project.version",
    "pyproject.toml:tool.commitizen.version",
    "src/plutonlib/__init__.py:__version__",  # Updated path
    "src/plutonlib/_version.py:__version__"   # Alternative option
]
changelog_file = "CHANGELOG.md"
changelog_format = "cliff"  # Explicitly specify cliff format
changelog_hook = "git cliff --output CHANGELOG.md"
tag_format = "v$version"
update_changelog_on_bump = false
major_version_zero = true
use_editor = true 

[project.urls]
Homepage = "https://github.com/LaaniLoo/plutonlib"